<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_rviz_common</name>
  <version>0.0.1</version>
  <description>Common libraries for gz_rviz and gz_rviz_plugins</description>

  <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
  <license>Apache License, Version 2.0</license>

  <author>Sarathkrishnan Ramesh</author>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Fortress (default) -->
  <depend condition="$GZ_VERSION == 'garden'">gz-sim7</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-gui6</depend>
  <depend condition="$GZ_VERSION == ''">ignition-gui6</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-math7</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-math6</depend>
  <depend condition="$GZ_VERSION == ''">ignition-math6</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
