<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_rviz_plugins</name>
  <version>0.0.1</version>
  <description>This package contains visualization plugins for gz-rviz</description>

  <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
  <author email="sarathkrishnan99@gmail.com">Sarathkrishnan Ramesh</author>

  <license>Apache License, Version 2.0</license>

  <depend>geometry_msgs</depend>
  <depend>gz_rviz_common</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <!-- Fortress (default) -->
  <depend>ignition-math6</depend>
  <depend condition="$GZ_VERSION == 'garden'">>gz-math7</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-gui7</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-rendering7</depend>
  <depend condition="$GZ_VERSION == 'garden'">gz-common5</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-gui6</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-rendering6</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-math6</depend>
  <depend condition="$GZ_VERSION == 'fortress'">ignition-common4</depend>
  <depend condition="$GZ_VERSION == ''">ignition-math6</depend>
  <depend condition="$GZ_VERSION == ''">ignition-common4</depend>
  <depend condition="$GZ_VERSION == ''">ignition-gui6</depend>
  <depend condition="$GZ_VERSION == ''">ignition-rendering6</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
